--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chat App</title>
-</head>
-<body>
-  <p>Hello World</p>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chat App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./front/style/index.css" />
+  </head>
+  <body>
+    <ul id="messages"></ul>
+    <form class="formulario" action="">
+      <input id="m" autocomplete="off" /><button class="boton" onclick="">Send</button>
+    </form>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/front/index.js"></script>
+  </body>
 </html>
