Agrega mostrar participantes en el render de express

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -17,6 +17,9 @@
     <form class="formulario" action="">
       <input id="m" autocomplete="off" /><button class="boton" onclick="">Send</button>
     </form>
+    <div id="bloque-participantes">
+      <ul id="participantes"></ul>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/front/index.js"></script>
   </body>
